# Exhaustive-Modelling-of-Institutional-Legitimacy-of-International-Agencies---EMILIA-Index

./: LICENSE  README.md  new_twitter_model.ipynb  requirements.txt  setup.cfg
src/emiliaworks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pack_emilia/: emilia.py
