[metadata]
name = emiliaworks
version = 0.1.0
author = Revanth Uppalapati
author_email = revanthuppalapati1708@gmail.com
description = Legitimacy Index
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/revanthbugatti/Exhaustive-Modelling-of-Institutional-Legitimacy-of-International-Agencies---EMILIA-Index
project_urls =
    Bug Tracker = https://github.com/revanthbugatti/Exhaustive-Modelling-of-Institutional-Legitimacy-of-International-Agencies---EMILIA-Index/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src